--- a/index/views/layouts/main.handlebars
+++ b/index/views/layouts/main.handlebars
@@ -3,8 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-		<link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" />
-		<title>MVC With Burgers!</title>
+		<title>HandleBars</title>
 	</head>
 	<body>
 		{{{ body }}}
