static files usage in node js

--- a/index/views/index.handlebars
+++ b/index/views/index.handlebars
@@ -32,5 +32,8 @@
             {{/with}}
             {{user.address.state}}</span>
         </div>
+        <div class="jumbotron" align="center">
+            <img src="/static/triangles.jpg" width="720px" height="480px" class="img-responsive" alt="Triangle">
+        </div>
     </body>
 </html>
